Create home page (gallery page)
https://trello.com/c/xSqHkHaz/14-create-home-page-gallery-page

* Home page showing the gallery of photos
* Twitter-boostrap modal with photo is open when open button is clicked.

--- a/wedding_gallery/templates/base.jinja2
+++ b/wedding_gallery/templates/base.jinja2
@@ -16,7 +16,7 @@
     {% block body %}
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#">My Wedding Gallery</a>
+                <a class="navbar-brand" href="/">My Wedding Gallery</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -48,7 +48,6 @@
         </nav>
         <div class="container my-4">
             {% block content %} {% endblock %}
-            
         </div>
     {% endblock body %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
