--- a/wedding_gallery/templates/base.jinja2
+++ b/wedding_gallery/templates/base.jinja2
@@ -21,7 +21,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="mainMenu">
-                    
+                    {{request.authenticated_userid}}
                     {% if False %}
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
