--- a/wedding_gallery/templates/register.jinja2
+++ b/wedding_gallery/templates/register.jinja2
@@ -1,11 +1,10 @@
 {% extends 'base.jinja2' %}
 
 {% block title %}
-    Upload Photo
+    Register
 {% endblock %}
 
 {% block content %}
-
 {% if view.session.peek_flash(queue='error') %}
     <div class="alert alert-warning fade show" role="alert">
         {{ view.session.pop_flash(queue='error')[0] }}
@@ -13,35 +12,31 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-{% elif view.session.peek_flash(queue='success') %}
-    <div class="alert alert-success fade show" role="alert">
-        {{ view.session.pop_flash(queue='success')[0] }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
 {% endif %}
-
 <div class="row">
     <div class="col-md-6 offset-md-3 my-4">
         <div class="card">
             <div class="card-header">
-                Upload Your Photo
+                Registration
             </div>
             <div class="card-body">
-                <form action="{{request.route_url('save_photo')}}" method="post" accept-charset="utf-8" enctype="multipart/form-data">
+                <form action="{{request.route_url('register')}}" method="post" accept-charset="utf-8">
                     <div style="display: none;">
                         <input name="csrf_token" type="hidden" value="{{ view.session.get_csrf_token() }}" />
                     </div>
                     <div class="form-group">
-                        <label for="photo">Choose photo:</label>
-                        <input type="file" class="form-control-file" id="photo" name="photo" required>
+                        <label for="name">Name:</label>
+                        <input type="text" class="form-control" id="name" name="name" required>
                     </div>
                     <div class="form-group">
-                        <label for="text-area">Description:</label>
-                        <textarea name="description" class="form-control" id="text-area" rows="3"></textarea>
+                        <label for="password">Password:</label>
+                        <input type="password" class="form-control" id="password" name="password" required>
                     </div>
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <div class="form-group">
+                        <label for="confirm">Confirm password:</label>
+                        <input type="password" class="form-control" id="confirm" name="confirm" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Register</button>
                 </form> 
             </div>
         </div>
