--- a/wedding_gallery/templates/base.jinja2
+++ b/wedding_gallery/templates/base.jinja2
@@ -21,26 +21,23 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="mainMenu">
-                    {{request.authenticated_userid}}
-                    {% if False %}
+                    {% if request.user %}
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
                               <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                  {{ user.username }}
+                                  {{ request.user.name }}
                               </a>
                               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                                       <a class="dropdown-item" href="#">My account</a>
-                                      <a class="dropdown-item" href="#">Change password</a>
                                       <div class="dropdown-divider"></div>
-                                      <a class="dropdown-item" href="#">Log out</a>
+                                      <a class="dropdown-item" href="{{request.route_url('logout')}}">Log out</a>
                                     </div>
                             </li>
                           </ul>
-                        
                     {% else %}
                         <form class="form-inline ml-auto">
-                            <a href="#" class="btn btn-outline-secondary">Log in</a>
-                            <a href="#" class="btn btn-primary ml-2">Sign up</a>
+                            <a href="{{request.route_url('login')}}" class="btn btn-outline-secondary">Log in</a>
+                            <a href="{{request.route_url('register')}}" class="btn btn-primary ml-2">Sign up</a>
                         </form>
                     {% endif %}        
                 </div>
