--- a/wedding_gallery/templates/upload.jinja2
+++ b/wedding_gallery/templates/upload.jinja2
@@ -7,19 +7,9 @@
 {% block content %}
 
 {% if view.session.peek_flash(queue='error') %}
-    <div class="alert alert-warning fade show" role="alert">
-        {{ view.session.pop_flash(queue='error')[0] }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
+    {% include "success.jinja2" ignore missing %}
 {% elif view.session.peek_flash(queue='success') %}
-    <div class="alert alert-success fade show" role="alert">
-        {{ view.session.pop_flash(queue='success')[0] }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
+    {% include "error.jinja2" ignore missing %}
 {% endif %}
 
 <div class="row">
